--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "@reduxjs/toolkit": "^2.11.2",
     "framer-motion": "^12.29.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.13.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
